--- a/main.css
+++ b/main.css
@@ -1,17 +1,33 @@
+body{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width: 80em;
+}
 #main{
-
+    width: 60em;
+    margin: auto;
+    align-items: center;
+    background: aliceblue;
+    border-radius: 5px;
 }
 #title{
-
+    font-size: 40px;
+    text-align: center;
+    padding: 20px 0 5px  0;
+}
+#title-desc{
+    text-align: center;
+    font-size: 20px;
 }
 #image-div{
-
+    
 }
 #image{
-
+    width: 45em;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.10), 0 6px 6px rgba(0,0,0,0.12);
+    padding: 5px;
 }
-#image-caption{
-
+#img-caption{
+    padding: 10px 20px 10px 20px;
 }
 #tribute-info{
 
