--- a/main.css
+++ b/main.css
@@ -1,39 +1,22 @@
 body{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    width: 80em;
-    background: linen;
+    font-family: sans-serif;
+    background: red;
+}
+#desc-title{
+    text-align: center;
 }
 #main{
-    width: 60em;
-    margin: auto;
-    align-items: center;
-    background: lightskyblue;
-    border-radius: 5px;
+    padding: 30px;
+    background-color: white;
 }
 #title{
     font-size: 40px;
     text-align: center;
-    padding: 20px 0 5px  0;
-}
-#title-desc{
-    text-align: center;
-    font-size: 20px;
 }
 #image-div{
-    padding: 10px 0px 10px 100px;
+    background-color: royalblue;
 }
 #image{
-    width: 45em;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.10), 0 6px 6px rgba(0,0,0,0.12);
-    padding: auto;
-    border: solid 2px red;
-}
-#img-caption{
-    padding: 10px 20px 10px 20px;
-}
-#tribute-info{
-
-}
-#tribute-link{
-    
+    padding: 5px 5px 5px 5px;
+    width: 90wm
 }
