--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body{
     font-family: sans-serif;
-    background: red;
+    background: lightgray;
 }
 #desc-title{
     text-align: center;
@@ -14,7 +14,7 @@ body{
     text-align: center;
 }
 #image-div{
-    background-color: royalblue;
+    background-color: lightskyblue;
 }
 #image{
     padding: 5px 5px 5px 5px;
