--- a/main.css
+++ b/main.css
@@ -1,30 +1,69 @@
 body{
-    font-family: sans-serif;
-    background: lightgray;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
 }
-#desc-title{
+
+h3{
+    padding: 20px;
     text-align: center;
 }
+
+div ul li{
+    display: flex;
+    text-align: justify;
+    margin: 0px;
+    padding: 0px;
+}
+
+/*User Story #1 */
 #main{
+    display: block;
+    background-color: antiquewhite;
+    margin: 20px 5px 20px 5px;
+    border-radius: 5px;
+}
+
+/*User Story #2 */
+#title{
+    padding: 20px;
+    text-align: center;
+    font-size: 40px;
+}
+
+/*User Story #3 */
+#img-fig{
+    margin: 20px;
     padding: 30px;
+    border-radius: 5px;
     background-color: white;
 }
-#title{
-    font-size: 40px;
-    text-align: center;
-}
-#image-div{
-    background-color: lightskyblue;
-    height: 50em;
-    width: 70em;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+
+/*User Story #4, #8 and #9 */
 #image{
-    width: 50em;
+    max-width: 100%;
+    height: auto;
 }
+
+/*User Story #5 */
 #img-caption{
-    text-align: ;
+    text-align: center;
+    padding: 10px;
 }
+
+/*User Story #6 */
+#tribute-info{
+    position: -ms-page;
+    width: 70%;
+    max-width: 700px;
+    margin: auto;
+    padding: 0px;
+}
+
+/*User Story #7 */
+#tribute-link{
+    text-decoration: none;
+    color: rgb(0, 100, 255);
+}
+
+
